--- a/src/Vinogradar/CompaniesBundle/Resources/public/css/general.css
+++ b/src/Vinogradar/CompaniesBundle/Resources/public/css/general.css
@@ -1,2 +1,8 @@
-.glowing-border {border:2px solid #dadada;border-radius:7px;}
-.glowing-border:focus {outline: none;border-color:#9ecaed;box-shadow:0010px#9ecaed;}
+.inline-block {
+    display: inline-block;
+}
+.heading {
+    font-size: 1.3em;
+    margin: 0.5em 0;
+    color: #707070;
+}
