--- a/src/Vinogradar/CompaniesBundle/Resources/views/Company/create.html.twig
+++ b/src/Vinogradar/CompaniesBundle/Resources/views/Company/create.html.twig
@@ -5,34 +5,15 @@
 
 {% block stylesheets %}
     {% stylesheets 
-        'bundles/vinogradarcompanies/css/company.css' filter='cssrewrite'
+        'bundles/vinogradarcompanies/css/Company/show-and-create.css' filter='cssrewrite'
     %}
         <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
 {% endblock %}
-
-{% block javascripts %}
-    {% javascripts '@VinogradarCompaniesBundle/Resources/public/vendor/bower_components/lightbox/js/lightbox.min.js' %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-{% endblock %}
     
 {% block body %}
-    <div class="header hidden-xs">
-        <a href="/" class="logo">
-            vinogradar.kiev.ua
-        </a>
-        <div class="controls">
-            <input id="search" class="form-control" type="search" placeholder="поиск" />
-            <div id="catalog-button" class="btn btn-default">
-                каталог
-            </div>
-            <div id="add-company" class="btn btn-default">
-                <span class="btn-plus">+</span> компания
-            </div>
-        </div>
-    </div>
-    <div class="sheet">
+    {% include "VinogradarCompaniesBundle:header:light.html.twig" %}
+    <div class="page-content-container">
         <div class="company">
         {{ form_start(form) }}
             <div class="company-header">
@@ -41,6 +22,11 @@
                 </div>
                 {{ form_errors(form.name) }}
                 {{ form_widget(form.name, {'attr': {'placeholder': 'Название компании'} }) }}
+                <div class="heading-form-small">
+                    {{ form_label(form.name_for_url) }}
+                </div>
+                {{ form_errors(form.name_for_url) }}
+                vinogradar.kiev.ua/ {{ form_widget(form.name_for_url) }}
             </div>
             <div class="company-body">
                 <div class="heading-form-small">
@@ -66,13 +52,13 @@
                 </div>
                 {{ form_errors(form.website) }}
                 {{ form_widget(form.website) }}
-            </div> <!-- end .company>.body -->
+            </div> <!-- end .company-body -->
 
             <div class="company-footer">
                 <div class="heading">
                     {{ form_label(form.tags) }}
                 </div>
-                <ul class="tags">
+                <ul class="tags" data-prototype="{{ form_widget(form.tags.vars.prototype)|e }}">
                     {# iterate over each existing tag and render its only field: name #}
                     {% for tag in form.tags %}
                         <li>{{ form_row(tag.name) }}</li>
@@ -84,4 +70,84 @@
         {{ form_end(form) }}
         </div>
     </div>
+
+
+{% endblock %}
+
+{% block javascripts %}
+    {% javascripts '@VinogradarCompaniesBundle/Resources/public/vendor/bower_components/lightbox/js/lightbox.min.js' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
+    <script>
+    /**
+     * Script for adding and removing tags
+     */
+
+    var $collectionHolder;
+
+    // setup an "add a tag" link
+    var $addTagLink = $('<a href="#" class="add_tag_link">Add a tag</a>');
+    var $newLinkLi = $('<li></li>').append($addTagLink);
+
+    jQuery(document).ready(function() {
+        // Get the ul that holds the collection of tags
+        $collectionHolder = $('ul.tags');
+
+        // add a delete link to all of the existing tag form li elements
+        $collectionHolder.find('li').each(function() {
+            addTagFormDeleteLink($(this));
+        });
+
+        // add the "add a tag" anchor and li to the tags ul
+        $collectionHolder.append($newLinkLi);
+
+        // count the current form inputs we have (e.g. 2), use that as the new
+        // index when inserting a new item (e.g. 2)
+        $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+        $addTagLink.on('click', function(e) {
+            // prevent the link from creating a "#" on the URL
+            e.preventDefault();
+
+            // add a new tag form (see next code block)
+            addTagForm($collectionHolder, $newLinkLi);
+        });
+    });
+
+    function addTagForm($collectionHolder, $newLinkLi) {
+        // Get the data-prototype explained earlier
+        var prototype = $collectionHolder.data('prototype');
+
+        // get the new index
+        var index = $collectionHolder.data('index');
+
+        // Replace '__name__' in the prototype's HTML to
+        // instead be a number based on how many items we have
+        var newForm = prototype.replace(/__name__/g, index);
+
+        // increase the index with one for the next item
+        $collectionHolder.data('index', index + 1);
+
+        // Display the form in the page in an li, before the "Add a tag" link li
+        var $newFormLi = $('<li></li>').append(newForm);
+        $newLinkLi.before($newFormLi);
+
+        // add a delete link to the new form
+        addTagFormDeleteLink($newFormLi);
+    }
+
+    function addTagFormDeleteLink($tagFormLi) {
+    var $removeFormA = $('<a href="#">delete this tag</a>');
+    $tagFormLi.append($removeFormA);
+
+    $removeFormA.on('click', function(e) {
+        // prevent the link from creating a "#" on the URL
+        e.preventDefault();
+
+        // remove the li for the tag form
+        $tagFormLi.remove();
+    });
+}
+    </script>
 {% endblock %}
