--- a/src/Vinogradar/CompaniesBundle/Resources/views/Company/show.html.twig
+++ b/src/Vinogradar/CompaniesBundle/Resources/views/Company/show.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}
     {% stylesheets 
-        'bundles/vinogradarcompanies/css/company.css' filter='cssrewrite'
+        'bundles/vinogradarcompanies/css/Company/show-and-create.css' filter='cssrewrite'
     %}
         <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
@@ -19,27 +19,14 @@
 {% endblock %}
     
 {% block body %}
-    <div class="header hidden-xs">
-        <a href="/" class="logo">
-            vinogradar.kiev.ua
-        </a>
-        <div class="controls">
-            <input id="search" class="form-control" type="search" placeholder="поиск" />
-            <div id="catalog-button" class="btn btn-default">
-                каталог
-            </div>
-            <a href="{{ path('vinogradar_companies_create_company') }}" id="add-company" class="btn btn-default">
-                <span class="btn-plus">+</span> компания
-            </a>
-        </div>
-    </div>
-    <div class="sheet">
+    {% include "VinogradarCompaniesBundle:header:light.html.twig" %}
+    <div class="page-content-container">
         <div class="company">
             <div class="company-header">
                 <div class="name">
                     {{company.name}}
                     <div class="date">
-                        10.05.2014
+                        {{company.lastUpdateDate | date('d.m.Y')}}
                     </div>
                 </div>
             </div>
@@ -71,12 +58,19 @@
             </div> <!-- end .company>.body -->
 
             <div class="company-footer">
-                <div class="views">
-                    просмотров: {{ company.viewsNumber }}
-                </div>
+                {# {% if company.viewsNumber %} #}
+                    <div class="views">
+                        просмотров: {{ company.viewsNumber }}1
+                    </div>
+                {# {% endif %} #}
 
                 <div class="tags">
-                    Теги: <a href="#">кафе</a>, рестораны, отдых
+                    <span class="heading-2">
+                        Теги:
+                    </span>
+                    {% for tag in company.tags %}
+                        <a href="{{ path('vinogradar_companies_list_by_tag', {'tagNameForUrl': tag.nameForUrl}) }}">{{ tag.name }}</a>{% if not loop.last %}, {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
